added author to the book

--- a/views/pages/pa02books.ejs
+++ b/views/pages/pa02books.ejs
@@ -26,6 +26,7 @@
                                 </h3>
                             </div>
                             <div class="panel-body">
+                                <p><b>Author: <%= book.author %></b></p>
                                 <%= book.summary %>
                             </div>
                         </div>
