--- a/views/pages/pa02.ejs
+++ b/views/pages/pa02.ejs
@@ -22,6 +22,10 @@
           <input type="text" class="form-control" id="title" name="title">
         </div>
         <div class="form-group">
+          <label for="author">Book Author</label>
+          <input type="text" class="form-control" id="author" name="author">
+        </div>
+        <div class="form-group">
           <label for="summary">Book Summary</label>
           <textarea class="form-control" id="summary" name="summary" rows="4"></textarea>
         </div>
