--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,19 +1,37 @@
-<nav class="navbar navbar-default navbar-static-top navbar-inverse">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <ul class="nav navbar-nav">
-      <li><a href="/" style="padding: 0 2rem; margin: 0"><img class="logo" src="/images/BYUI-logo.png" alt="BYU Idaho logo"></a></li>
-      <li class="<%= path === '/' ? 'active' : ''%>">
-        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
-      </li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Prove Assignments <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li class="<%= path === '/pa01' ? 'active' : ''%>"><a href="/pa01">pa01</a></li>
-            <li class="<%= path === '/pa02' ? 'active' : ''%>"><a href="/pa02">pa02</a></li>
-            <li class="<%= path === '/pa03' ? 'active' : ''%>"><a href="/pa03">pa03</a></li>
-            <li class="<%= path === '/pa04' ? 'active' : ''%>"><a href="/pa04">pa04</a></li>
+    <a class="navbar-brand" href="/">
+      <img class="logo" src="/images/BYUI-logo.png" width="30" height="24" alt="BYU Idaho logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link <%= path === '/' ? 'active' : ''%>" href="/"><i class="fas fa-home"></i> Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Prove Assignemnts
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li class="<%= path === '/pa01' ? 'active' : ''%>"><a class="dropdown-item"
+                href="/proveAssignments/pa01">PA01</a></li>
+            <li class="<%= path === '/pa02' ? 'active' : ''%>"><a class="dropdown-item"
+                href="/proveAssignments/pa02">PA02</a></li>
+            <li class="<%= path === '/pa03' ? 'active' : ''%>"><a class="dropdown-item"
+                href="/project">PA03</a></li>
+            <li class="<%= path === '/pa04' ? 'active' : ''%>"><a class="dropdown-item"
+                href="/proveAssignments/pa04">PA04</a></li>
           </ul>
-      </li>
-    </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/project">Project</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
