--- a/views/pages/pa02.ejs
+++ b/views/pages/pa02.ejs
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="container">
-      <form action="/pa02/addBook" method="POST">
+      <form action="pa02/addBook" method="POST">
         <div class="form-group">
           <label for="title">Book Title</label>
           <input type="text" class="form-control" id="title" name="title">
