--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,8 @@
 .jumbotron {
+  padding-top: 80px; 
+  margin-bottom: 2rem;
   background: #0065BD;
+  border-radius: .3rem;
   color: white;
   padding-bottom: 80px; 
 }
@@ -36,11 +39,40 @@
 .jumbotron .lang-logo img {
   max-width: 100%; 
 }
-.pb-30{
-  padding-bottom: 30px;
-}
 
 .logo {
-  width: 5rem;
-  height: 5rem;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.img-card-responsive{
+  height: 200px;
+  width: auto;
+  max-width: 100%;
+  object-fit: cover;
+}
+
+.card-body{
+  overflow: hidden;
+}
+
+.card-text-responsive{
+  width: 100%;
+  max-height: 80px;
+  height: 80px;
+  padding-right: 17px;
+  overflow: auto;
+  box-sizing: content-box;
+}
+
+.img-responsive{
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+}
+
+@media (min-width: 768px) {
+  .img-responsive{
+    height: 600px;
+  }
 }
