--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,9 +8,9 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Prove Assignments <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li class="<%= path === '/pa01' ? 'active' : ''%>"><a href="/pa01">pa01</a></li>
-            <li class="<%= path === '/pa03' ? 'active' : ''%>"><a href="/pa03">pa03</a></li>
-            <li class="<%= path === '/pa04' ? 'active' : ''%>"><a href="/pa04">pa04</a></li>
+            <li class="<%= path === '/pa01' ? 'active' : ''%>"><a href="/proveAssignments/pa01">pa01</a></li>
+            <li class="<%= path === '/pa03' ? 'active' : ''%>"><a href="/proveAssignments/pa03">pa03</a></li>
+            <li class="<%= path === '/pa04' ? 'active' : ''%>"><a href="/proveAssignments/pa04">pa04</a></li>
           </ul>
       </li>
     </ul>
