--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -25,7 +25,7 @@
             <li class="<%= path === '/pa03' ? 'active' : ''%>"><a class="dropdown-item"
                 href="/project">PA03</a></li>
             <li class="<%= path === '/pa04' ? 'active' : ''%>"><a class="dropdown-item"
-                href="/proveAssignments/pa04">PA04</a></li>
+                href="/project">PA04</a></li>
           </ul>
         </li>
         <li class="nav-item">
