--- a/views/project/cart.ejs
+++ b/views/project/cart.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <% include ../includes/header.ejs %>
+    <% include ./includes/header.ejs %>
 </head>
 
 <body>
-    <% include ../includes/nav.ejs %>
+    <% include ./includes/nav.ejs %>
 <div class="jumbotron text-center">
     <div class="container">
         <h1><%= title %></h1>
@@ -35,6 +35,7 @@
                                 </div>
                                 <div class="col-md-4 col-12 d-flex align-items-center justify-content-center">
                                     <form action="/project/cart-delete-item" method="post">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                         <input type="hidden" name="productId" value="<%= product.productId._id %>">
                                         <button class="btn btn-primary m-auto">
                                             Delete
@@ -46,6 +47,12 @@
                     </div>
                 </div>
             <% }) %>
+            <div class="d-flex align-items-center justify-content-center mt-3">
+                <form action="/project/create-order" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <button type="submit" class="btn btn-primary">Order Now!</button>
+                </form>
+            </div>
         <% } else { %>
             <h1>There is no products in the Cart</h1>
         <% } %>
