--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,43 +1,43 @@
 .jumbotron {
-  padding-top: 80px; 
+  padding-top: 80px;
   margin-bottom: 2rem;
-  background: #0065BD;
-  border-radius: .3rem;
+  background: #0065bd;
+  border-radius: 0.3rem;
   color: white;
-  padding-bottom: 80px; 
+  padding-bottom: 80px;
 }
 
 .jumbotron .btn-primary {
   background: #845ac7;
-  border-color: #845ac7; 
+  border-color: #845ac7;
 }
 
 .jumbotron .btn-primary:hover {
-  background: #7646c1; 
+  background: #7646c1;
 }
-  
+
 .jumbotron p {
   color: #d9ccee;
   max-width: 75%;
-  margin: 1em auto 2em; 
+  margin: 1em auto 2em;
 }
-  
+
 .navbar + .jumbotron {
-  margin-top: -20px; 
+  margin-top: -20px;
 }
-  
+
 .jumbotron .lang-logo {
   display: block;
-  background: #B01302;
+  background: #b01302;
   border-radius: 50%;
   overflow: hidden;
   width: 100px;
   height: 100px;
   margin: auto;
-  border: 2px solid white; 
+  border: 2px solid white;
 }
 .jumbotron .lang-logo img {
-  max-width: 100%; 
+  max-width: 100%;
 }
 
 .logo {
@@ -45,18 +45,18 @@
   height: 2.5rem;
 }
 
-.img-card-responsive{
+.img-card-responsive {
   height: 200px;
   width: auto;
   max-width: 100%;
   object-fit: cover;
 }
 
-.card-body{
+.card-body {
   overflow: hidden;
 }
 
-.card-text-responsive{
+.card-text-responsive {
   width: 100%;
   max-height: 80px;
   height: 80px;
@@ -65,21 +65,54 @@
   box-sizing: content-box;
 }
 
-.img-responsive{
+.img-responsive {
   height: 400px;
   width: 100%;
   object-fit: cover;
 }
 
 @media (min-width: 768px) {
-  .img-responsive{
+  .img-responsive {
     height: 600px;
   }
 }
 
-.white{
+.white {
   color: white;
 }
-.white:hover{
+.white:hover {
   color: grey;
+}
+.link-white {
+  color: rgba(255, 255, 255, 0.55);
+}
+.link-white:hover {
+  color: rgba(255, 255, 255);
+}
+.nav-link.link-white {
+  padding-left: 0;
+}
+
+button.nav-link {
+  display: inline-block;
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+
+  background: transparent;
+
+  /* inherit font & color from ancestor */
+  font: inherit;
+
+  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+  line-height: normal;
+
+  /* Corrects font smoothing for webkit */
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+
+  /* Corrects inability to style clickable `input` types in iOS */
+  -webkit-appearance: none;
 }
