--- a/views/project/admin/products.ejs
+++ b/views/project/admin/products.ejs
@@ -2,19 +2,16 @@
 <html>
 
 <head>
-    <% include ../../includes/header.ejs %>
+    <% include ../includes/header.ejs %>
 </head>
 
 <body>
-    <% include ../../includes/nav.ejs %>
+    <% include ../includes/nav.ejs %>
         <div class="jumbotron text-center">
             <div class="container">
                 <h1>
                     <%= title %>
                 </h1>
-                <p>This is a node app for the CSE 341 Project</p>
-                <a type="button" class="btn btn-lg btn-primary" href="https://github.com/jo3l17/CSE341"><span
-                        class="glyphicon glyphicon-download"></span> Source on GitHub</a>
             </div>
         </div>
         <div class="container">
@@ -35,6 +32,7 @@
                                     <a href="/project/admin/edit-product/<%= product.id %>" class="btn btn-primary">Edit</a>
                                     <form class="d-inline" action="/project/admin/delete-product" method="post">
                                         <input type="hidden" value="<%= product.id %>" name="productId">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                         <button class="btn btn-primary" type="submit">Delete</button>
                                     </form>
                                 </div>
