--- a/views/project/auth/signup.ejs
+++ b/views/project/auth/signup.ejs
@@ -15,6 +15,7 @@
         </div>
     </div>
     <div class="container">
+        <% include ../includes/errorMessage.ejs %>
         <form action="/project/signup" class="row" method="POST">
             <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
                 <label for="email" class="form-label">Email</label>
