--- a/views/project/auth/new-password.ejs
+++ b/views/project/auth/new-password.ejs
@@ -16,20 +16,17 @@
         </div>
         <div class="container">
             <% include ../includes/errorMessage.ejs %>
-            <form action="/project/login" class="row" method="POST">
-                <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="email" name="email" placeholder="name@example.com">
-                </div>
+            <form action="/project/new-password" class="row" method="POST">
                 <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
+                <input type="hidden" name="userId" value="<%= userId %>">
+                <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit"
-                    class="btn btn-primary mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">Login</button>
+                    class="btn btn-primary mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">Update Password</button>
             </form>
-            <a class="link-primary col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4" href="/project/reset">Reset Password</a>
         </div>
 </body>
 
