--- a/views/project/auth/login.ejs
+++ b/views/project/auth/login.ejs
@@ -19,11 +19,21 @@
             <form action="/project/login" class="row" method="POST">
                 <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="email" name="email" placeholder="name@example.com">
+                    <input
+                    type="text"
+                    class="form-control <%= validationErrors.find(e=>e.param === 'email') ? 'is-invalid' : ''%>"
+                    id="email"
+                    name="email"
+                    value="<%= oldInput.email %>"
+                    placeholder="name@example.com">
                 </div>
                 <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password">
+                    <input type="password"
+                    class="form-control <%= validationErrors.find(e=>e.param === 'password') ? 'is-invalid' : ''%>"
+                    id="password"
+                    name="password"
+                    value="<%= oldInput.password %>">
                 </div>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit"
