--- a/views/project/cart.ejs
+++ b/views/project/cart.ejs
@@ -36,6 +36,7 @@
                                 <div class="col-md-4 col-12 d-flex align-items-center justify-content-center">
                                     <form action="/project/cart-delete-item" method="post">
                                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                        <input type="hidden" name="quantity" value="<%= product.quantity %>">
                                         <input type="hidden" name="productId" value="<%= product.productId._id %>">
                                         <button class="btn btn-primary m-auto">
                                             Delete
