--- a/views/project/orders.ejs
+++ b/views/project/orders.ejs
@@ -20,23 +20,32 @@
                 <% if (orders.length <=0) { %>
                     <h1>Nothing there!</h1>
                     <% } else { %>
-                        <ul class="orders">
-                            <% orders.forEach(order=> { %>
-                                <li class="card my-3 p-4">
-                                    <h4 class="m-0">Order - # <%= order._id %>
-                                    </h4>
-                                    <hr class="my-2">
-                                    <ul class="orders__products">
-                                        <% order.products.forEach(p=> { %>
-                                            <li class="orders__products-item">
-                                                <%= p.product.title %> (<%= p.quantity %>)
-                                            </li>
-                                            <% }); %>
-                                    </ul>
-                                </li>
-                                <% }); %>
-                        </ul>
-                        <% } %>
+                        <% orders.forEach(order=> { %>
+                            <div class="accordion" id="accordion-orders">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="panelsStayOpen-heading-<%= order._id %>">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-<%= order._id %>"
+                                            aria-expanded="false" aria-controls="panelsStayOpen-collapse-<%= order._id %>">
+                                            Order - # <%= order._id %>
+                                        </button>
+                                    </h2>
+                                    <div id="panelsStayOpen-collapse-<%= order._id %>" class="accordion-collapse collapse"
+                                        aria-labelledby="panelsStayOpen-heading-<%= order._id %>">
+                                        <div class="accordion-body">
+                                            <ul class="orders__products">
+                                                <% order.products.forEach(p=> { %>
+                                                    <li class="orders__products-item">
+                                                        <%= p.product.title %> (<%= p.quantity %>)
+                                                    </li>
+                                                    <% }); %>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <% }) %>
+                    <% } %>
             </div>
         </div>
 
