--- a/views/project/product-detail.ejs
+++ b/views/project/product-detail.ejs
@@ -25,7 +25,7 @@
                 <p>
                     <b>Price: <%= product.price %></b>
                 </p>
-                <% if (isAuthenticated) { %>
+                <% if (isAuthenticated && product.stock > 0) { %>
                 <form action="/project/cart" method="POST">
                     <input type="hidden" value="<%= product.id %>" name="productId">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
