error Handling updated

--- a/views/project/auth/login.ejs
+++ b/views/project/auth/login.ejs
@@ -33,7 +33,8 @@
                     class="form-control <%= validationErrors.find(e=>e.param === 'password') ? 'is-invalid' : ''%>"
                     id="password"
                     name="password"
-                    value="<%= oldInput.password %>">
+                    value="<%= oldInput.password %>"
+                    pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
                 </div>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit"
