--- a/views/project/auth/new-password.ejs
+++ b/views/project/auth/new-password.ejs
@@ -19,10 +19,14 @@
             <form action="/project/new-password" class="row" method="POST">
                 <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password">
+                    <input type="password"
+                    class="form-control <%= validationErrors.find(e=>e.param === 'password') ? 'is-invalid' : ''%>"
+                    value="<%= oldInput.password %>"
+                    id="password" name="password"
+                    pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
                 </div>
-                <input type="hidden" name="userId" value="<%= userId %>">
-                <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
+                <input type="hidden" name="userId" value="<%= userId || oldInput.userId %>">
+                <input type="hidden" name="passwordToken" value="<%= passwordToken || oldInput.passwordToken %>">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit"
                     class="btn btn-primary mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">Update Password</button>
