--- a/views/project/auth/reset.ejs
+++ b/views/project/auth/reset.ejs
@@ -19,7 +19,15 @@
             <form action="/project/reset" class="row" method="POST">
                 <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="email" name="email" placeholder="name@example.com">
+                    <input 
+                    type="text"
+                    id="email"
+                    name="email"
+                    placeholder="name@example.com"
+                    class="form-control <%= validationErrors.find(e=>e.param === 'email') ? 'is-invalid' : ''%>"
+                    value="<%= oldInput.email %>"
+                    required
+                    >
                 </div>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit"
