--- a/project/views/admin/products.ejs
+++ b/project/views/admin/products.ejs
@@ -37,7 +37,7 @@
                                             <form class="col-4 col-sm-12 col-md-4 px-1" action="/project/admin/delete-product" method="post">
                                                 <input type="hidden" value="<%= product.id %>" name="productId">
                                                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                                <button class="btn btn-primary w-100" type="submit">Delete</button>
+                                                <button class="btn btn-danger w-100" type="submit">Delete</button>
                                             </form>
                                             <div class="col-4 col-sm-12 col-md-4 px-1">
                                                 
@@ -45,9 +45,9 @@
                                                 <div class="input-group mb-3">
                                                         <!-- <button class="btn btn-outline-secondary" type="button">-</button> -->
                                                         <% if (product.stock>0) { %>
-                                                            <input class="btn btn-outline-secondary" type="submit" value="-"  name="modifyStock">
+                                                            <input class="btn btn-outline-danger" type="submit" value="-"  name="modifyStock">
                                                         <% } else { %>
-                                                            <input disabled class="btn btn-outline-secondary" type="submit" value="-"  name="modifyStock">
+                                                            <input disabled class="btn btn-outline-danger" type="submit" value="-"  name="modifyStock">
                                                         <% } %>
                                                         <!-- <input type="hidden" value="-1"> -->
                                                     <!-- </form> -->
@@ -56,7 +56,7 @@
                                                     <input value="<%= product.stock %>" readonly type="text" class="form-control" placeholder="" aria-label="Example text with two button addons">
                                                     <!-- <form action="/project/admin/stock" method="post"> -->
                                                         <!-- <input type="hidden" value="1"> -->
-                                                        <input class="btn btn-outline-secondary" type="submit" value="+" name="modifyStock">
+                                                        <input class="btn btn-outline-success" type="submit" value="+" name="modifyStock">
                                                         <!-- <button class="btn btn-outline-secondary" type="button">+</button> -->
                                                     
                                                 </div>
