--- a/project/views/auth/new-password.ejs
+++ b/project/views/auth/new-password.ejs
@@ -19,11 +19,19 @@
             <form action="/project/new-password" class="row" method="POST">
                 <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password"
-                    class="form-control <%= validationErrors.find(e=>e.param === 'password') ? 'is-invalid' : ''%>"
-                    value="<%= oldInput.password %>"
-                    id="password" name="password"
-                    pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
+                    <div class="input-group">
+                        <input type="password"
+                        class="form-control <%= validationErrors.find(e=>e.param === 'password') ? 'is-invalid' : ''%>"
+                        value="<%= oldInput.password %>"
+                        id="password" name="password"
+                        pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
+                        title="Password should be at least 8 characters long, contain at least one lowercase letter, one uppercase letter, and a special sign."
+                        required>
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="changePasswordVisibility()">
+                            <i id="password-eye" class="fas fa-eye d-none"></i>
+                            <i id="password-eye-slash" class="fas fa-eye-slash"></i>
+                        </button>
+                    </div>
                 </div>
                 <input type="hidden" name="userId" value="<%= userId || oldInput.userId %>">
                 <input type="hidden" name="passwordToken" value="<%= passwordToken || oldInput.passwordToken %>">
@@ -33,5 +41,22 @@
             </form>
         </div>
 </body>
+<script>
+    var seePassword = false
+    var seeConfirmPassword = false
+    function changePasswordVisibility() {
+        document.getElementById('password').type = seePassword ? 'password' : 'text'
+        var eye = document.getElementById('password-eye');
+        var eye_slash = document.getElementById('password-eye-slash');
+        if (seePassword) {
+            eye.classList.add('d-none');
+            eye_slash.classList.remove('d-none');
+        } else {
+            eye.classList.remove('d-none');
+            eye_slash.classList.add('d-none');
+        }
+        seePassword = !seePassword;
+    }
+</script>
 
 </html>
