--- a/project/views/cart.ejs
+++ b/project/views/cart.ejs
@@ -20,37 +20,67 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-4 col-12 ">
-                                    <h3>
-                                        <%= product.productId.title %>
-                                    </h3>
-                                    <p>
-                                        <%= product.productId.description %>
-                                    </p>
-                                </div>
-                                <div class="col-md-4 col-12">
-                                    <h4>
-                                        Quantity: <%= product.quantity %>
-                                    </h4>
-                                </div>
-                                <div class="col-md-4 col-12 d-flex align-items-center justify-content-center">
+                                <div class="col-1 d-flex align-items-start align-items-md-center justify-content-start">
                                     <form action="/project/cart-delete-item" method="post">
                                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                         <input type="hidden" name="quantity" value="<%= product.quantity %>">
                                         <input type="hidden" name="productId" value="<%= product.productId._id %>">
-                                        <button class="btn btn-primary m-auto">
-                                            Delete
+                                        <button class="btn btn-danger m-auto">
+                                            X
                                         </button>
                                     </form>
+                                </div>
+                                <div class="col-11">
+                                    <div class="row">
+                                        <div class="col-md-4 col-12 d-flex flex-column align-items-center justify-content-center">
+                                            <h3>
+                                                <%= product.productId.title %>
+                                            </h3>
+                                            <p>
+                                                <%= product.productId.description %>
+                                            </p>
+                                        </div>
+                                        <div class="col-md-4 col-12 d-flex align-items-center justify-content-center">
+                                            <h4>
+                                                Quantity: <%= product.quantity %>
+                                            </h4>
+                                        </div>
+                                        <div class="col-md-4 col-12 d-flex align-items-center justify-content-center justify-content-md-start">
+                                            <h4>
+                                                Price: <%= product.productId.price*product.quantity %>
+                                            </h4>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             <% }) %>
+            <div class="col-12 px-3">
+                <div class="card">
+                    <div class="card-body row">
+                        <div class="col-1"></div>
+                        <div class="col-11">
+                            <div class="row">
+                                <div class="col-md-4 col-12">
+                                </div>
+                                <div class="col-md-4 col-12">
+                                </div>
+                                <div class="col-md-4 col-12 d-flex align-items-center justify-content-center justify-content-md-start">
+                                    <h4>
+                                        Total: <%= total %>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="d-flex align-items-center justify-content-center mt-3">
                 <form action="/project/create-order" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <input type="hidden" name="total" value="<%= total %>">
                     <button type="submit" class="btn btn-primary">Order Now!</button>
                 </form>
             </div>
