--- a/project/views/includes/header.ejs
+++ b/project/views/includes/header.ejs
@@ -1,4 +1,4 @@
-<title>Node.js Getting Started on Heroku</title>
+<title><%= title %> | e-commerce app</title>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
