--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -32,7 +32,7 @@
                                 <form class="d-inline" action="/project/cart" method="post">
                                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                     <input type="hidden" value="<%= product.id %>" name="productId">
-                                    <button class="btn btn-primary" type="submit">Add to Cart</button>
+                                    <button class="btn btn-success" type="submit">Add to Cart</button>
                                 </form>
                             <% } %>
                         </div>
@@ -42,7 +42,12 @@
                                     $ <%= product.price %>
                                 </span>
                                 <span>
-                                    Stock: <%= product.stock %>
+                                    <% if (product.stock > 0) { %>
+                                        Stock: <%= product.stock %>
+                                    <% } else { %>
+                                        Out of stock
+                                    <% } %>
+                                    
                                 </span>
                             </li>
                     </div>
