--- a/project/views/auth/login.ejs
+++ b/project/views/auth/login.ejs
@@ -43,9 +43,11 @@
                         </button>
                     </div>
                 </div>
+                <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
+                    <button type="submit"
+                    class="btn btn-primary w-100">Login</button>
+                </div>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button type="submit"
-                    class="btn btn-primary mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">Login</button>
             </form>
             <a class="link-primary col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4" href="/project/reset">Reset Password</a>
         </div>
