--- a/project/views/auth/new-password.ejs
+++ b/project/views/auth/new-password.ejs
@@ -33,11 +33,13 @@
                         </button>
                     </div>
                 </div>
-                <input type="hidden" name="userId" value="<%= userId || oldInput.userId %>">
-                <input type="hidden" name="passwordToken" value="<%= passwordToken || oldInput.passwordToken %>">
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button type="submit"
-                    class="btn btn-primary mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">Update Password</button>
+                <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
+                    <input type="hidden" name="userId" value="<%= userId || oldInput.userId %>">
+                    <input type="hidden" name="passwordToken" value="<%= passwordToken || oldInput.passwordToken %>">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <button type="submit"
+                    class="btn btn-primary mb-3 w-100">Update Password</button>
+                </div>
             </form>
         </div>
 </body>
