--- a/project/views/auth/reset.ejs
+++ b/project/views/auth/reset.ejs
@@ -29,9 +29,11 @@
                     required
                     >
                 </div>
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button type="submit"
-                    class="btn btn-primary mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">Reset Password</button>
+                <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <button type="submit"
+                    class="btn btn-primary w-100">Reset Password</button>
+                </div>
             </form>
         </div>
 </body>
