--- a/project/views/auth/signup.ejs
+++ b/project/views/auth/signup.ejs
@@ -58,8 +58,10 @@
                     </button>
                 </div>
             </div>
-            <input type="hidden" name="_csrf" id="_csrf" value="<%= csrfToken %>">
-            <button type="submit" class="btn btn-primary mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">Signup</button>
+            <div class="mb-3 col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-md-4">
+                <input type="hidden" name="_csrf" id="_csrf" value="<%= csrfToken %>">
+                <button type="submit" class="btn btn-primary w-100">Signup</button>
+            </div>
         </form>
     </div>
 </body>
