--- a/project/views/includes/nav.ejs
+++ b/project/views/includes/nav.ejs
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
+        <a class="navbar-brand" href="/project">Buyit</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,6 +20,7 @@
                     <a class="nav-link <%= path === '/orders' ? 'active' : ''%>" href="/project/orders"><i
                             class="fas fa-clipboard-list"></i> Orders</a>
                 </li>
+                <% if (isSeller) { %>
                     <li class="nav-item">
                         <a class="nav-link <%= path === '/add-product' ? 'active' : ''%>"
                             href="/project/admin/add-product"><i class="fas fa-plus"></i> Add product</a>
@@ -27,6 +29,7 @@
                         <a class="nav-link <%= path === '/admin/products' ? 'active' : ''%>"
                             href="/project/admin/products"><i class="fas fa-user-shield"></i> Admin products</a>
                     </li>
+                <% } %>
                 <% } %>
             </ul>
             <% if (!isAuthenticated) { %>
@@ -39,6 +42,10 @@
                         href="/project/signup"><i class="fas fa-user"></i> Signup</a>
                 </span>
             <% } else { %>
+                <span>
+                    <a class="nav-link link-white <%= path === '/account' ? 'active' : ''%>"
+                        href="/project/account"><i class="fas fa-user"></i> Account</a>
+                </span>
                 <form action="/project/logout" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button class="nav-link link-white" type="submit" ><i class="fas fa-sign-out-alt"></i> Logout</button>
