--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -26,6 +26,8 @@
                 href="/project">PA03</a></li>
             <li class="<%= path === '/pa04' ? 'active' : ''%>"><a class="dropdown-item"
                 href="/project">PA04</a></li>
+            <li class="<%= path === '/pa08' ? 'active' : ''%>"><a class="dropdown-item"
+                  href="/proveAssignments/pa08">PA08</a></li>
           </ul>
         </li>
         <li class="nav-item">
